fixes icons on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -355,7 +355,7 @@ body {
    flex-direction: row;
    top: 0%;
    right: 0;
-   height: 100px;
+   height: 50px;
    width: 73.5vw;
    .link {
     display: flex;
@@ -492,7 +492,7 @@ body {
 
  .container .leftnav .links .link img {
   max-width: 30%;
-  margin-top: 4rem;
+  margin-top: 1rem;
   margin-right: 0;
   padding: 0;
   position: absolute;
